k8s-config/payment-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-api
  name: pay-api-deploy
  namespace: dev-is
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-api
  # strategy:
  #   type: RollingUpdate   
  #   rollingUpdate:
  #     maxSurge: 1 # Only 1 pod can be unavailable during an update
  #     maxUnavailable: 1 # Allows 1 additional pod above the desired count during updates
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - image: neotp/payment-api:latest
          name: payment-api
          imagePullPolicy: Always
          resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-api
  name: paymentapi-svc
  namespace: dev
spec:
  ports:
    - port: 7000      # ClusterIP port
      # protocol: TCP
      targetPort: 7000  # container port
  selector:
    app: payment-api
  type: ClusterIP
---
