k8s-config/payment-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payment-web-v1
  name: payment-web-v1-deploy
  namespace: dev-is
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-web-v1
  # strategy:
  #   type: RollingUpdate   
  #   rollingUpdate:
  #     maxSurge: 1 # Only 1 pod can be unavailable during an update
  #     maxUnavailable: 1 # Allows 1 additional pod above the desired count during updates
  template:
    metadata:
      labels:
        app: payment-web-v1
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - image: neotp/payment-web-v1:latest
          name: payment-web-v1
          imagePullPolicy: Always
          resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payment-web-v1
  name: paymentweb-svc
  namespace: dev-is
spec:
  ports:
    - port: 7070      # ClusterIP port
      # protocol: TCP
      targetPort: 7070  # container port
  selector:
    app: payment-web-v1
  type: ClusterIP
---
