k8s-config/payment-test-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-api-test-ingress
  namespace: dev-is
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2          
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - demo-pang.siscloudservices.com
  #     secretName: siscloudservices-cert
  rules:
    # - host: nginx-pang.com
    -  http:
        paths:
          - path: /test-payment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: paymentapitest-svc
                port:
                  number: 7777
          # - path: /apache1
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: apache-svc
          #       port:
          #         number: 8080
